# clipper

./: .gitignore  Cargo.toml  HOW-TO-PLAY.md  README.md
Clipper.xcodeproj/: project.pbxproj
Clipper.xcodeproj/xcshareddata/xcschemes/: Clipper.xcscheme
Clipper/Clipper.xcodeproj/: project.pbxproj
Clipper/Clipper.xcodeproj/project.xcworkspace/xcuserdata/kane.xcuserdatad/: UserInterfaceState.xcuserstate
Clipper/Clipper.xcodeproj/xcuserdata/kane.xcuserdatad/xcschemes/: xcschememanagement.plist
asset_loader/src/: lib.rs
assets/: dave.glb  factory.glb  house.glb  selection_circle.glb  viking_1.glb
common/: Cargo.toml
common/src/: lib.rs
components/: Cargo.toml
components/src/: brainwash_state.rs  combat_state.rs  human.rs  job.rs  lib.rs  transform.rs  viking.rs
examples/: textured_cube.rs
game/: Cargo.toml
game/src/: beacon.rs  camera.rs  clock.rs  config.rs  dave.rs  ecs.rs  game.rs  gui_interop.rs  human.rs  init.rs  input.rs  lib.rs  time.rs
game/src/components/: human.rs  mod.rs
game/src/systems/: beacons.rs  brainwash.rs  click.rs  combat.rs  construction.rs  dave_controller.rs  energy_regen.rs  find_brainwash_target.rs  game_over.rs  human_needs.rs  humans.rs  mod.rs  physics.rs  regen.rs  target_indicator.rs  update_position.rs  viking_behaviour.rs  viking_position.rs  viking_velocity.rs  viking_work.rs  vikings.rs
gui/: Cargo.toml
gui/src/: bottom_bar.rs  lib.rs
metal_renderer/: Cargo.toml
metal_renderer/src/: lib.rs  metal_renderer.rs
metal_renderer/src/shaders/: shaders.air  shaders.metal  shaders.metallib
renderer/: Cargo.toml
renderer/src/: lazy_renderer.rs  lib.rs
renderer/src/shaders/: shader.frag  shader.vert
runner/: Cargo.toml
runner/src/: main.rs
src/: lazy_renderer.rs  main.rs  vulkan_context.rs
vulkan_renderer/: Cargo.toml
vulkan_renderer/src/: buffer.rs  lazy_renderer.rs  lib.rs  vulkan_context.rs  vulkan_texture.rs
vulkan_renderer/src/shaders/: push_constant.glsl  shader.frag
