[package]
edition = "2021"
name = "bin"
version = "0.1.0"

[dependencies]
env_logger = "0.10.0"
game = {path = "game"}
hot-lib-reloader = "^0.6"
log = "0.4.19"
# hot-lib-reloader = {path = "../hot-lib-reloader-rs"}
renderer = {path = "renderer"}

[workspace]
members = ["renderer", "game", "common"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3
