[package]
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bitflags = "2.3.3"
erased-serde = "0.3.31"
glam = {version="0.22.0", features =["serde"]}
hecs = {version = "0.10.3", features= ["row-serialize"]}
log = "0.4.19"
rand = "0.8"
rapier3d = {version = "0.17.2", features = ["debug-render"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
thunderdome = "0.6.1"
typetag = "0.2.13"
winit = "0.28.6"
yakui = {git = "https://github.com/leetvr/yakui", branch = "vulkan_fixes"}
