[package]
edition = "2021"
name = "gui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
yakui = {git = "https://github.com/leetvr/yakui", branch = "vulkan_fixes"}
yakui-vulkan = {git = "https://github.com/leetvr/yakui", branch = "vulkan_fixes"}

[lib]
crate-type = ["dylib", "rlib"]
