[package]
edition = "2021"
name = "runner"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
game = {path = "../game"}
gui = {path = "../gui"}
# hot-lib-reloader = "^0.6"
hot-lib-reloader = {path = "../../hot-lib-reloader-rs"}
libloading = {path = "../../rust_libloading"}
log = "0.4.19"
renderer = {path = "../renderer"}
