[package]
authors = ["Let Eyes Equals Two"]
edition = "2021"
name = "vulkan_renderer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {features = ["linked"], version = "0.37.2"}
ash-window = "0.12.0"
bytemuck = "1.13.0"
common = {path = "../common"}
log = "0.4.17"
raw-window-handle = "0.5.0"
thunderdome = "0.6.0"
vk-shader-macros = "0.2.8"

[dev-dependencies]
env_logger = "0.10.0"
